<resources>
    <string name="app_name">MenuExample</string>
    <string name="action_settings">Settings</string>
    <string name="action_menu_opt1">Option 1</string>
    <string name="action_menu_opt2">Option 2</string>
    <string name="hello_world">Hello World!</string>
    <string name="opt1_sel">Option 1 selected</string>
    <string name="action_menu_opt2_sub1">Sub option 1</string>
    <string name="action_menu_opt2_sub2">Sub option 2</string>
    <string name="action_menu_opt2_sub3">Sub option 3</string>
    <string name="title_preferences">Configuraciones</string>
    <string name="menu_ctx_1">Buy</string>
    <string name="menu_ctx_2">Sell</string>
    <string name="menu_ctx_3">Share</string>
    <string name="buy_excl">Buy!</string>
    <string name="lets_buy">Let\'s sell it!</string>
    <string name="sharing">Sharing&#8230;</string>
    <string name="shared_excl">Shared!</string>
    <string name="sub1_sel">Sub option 1 selected</string>
    <string name="sub2_sel">Sub option 2 selected</string>
    <string name="sub3_sel">Sub option 3 selected</string>
    <string name="menu_group1_opt1">Option 1.1</string>
    <string name="menu_group1_opt2">Option 1.2</string>
    <string name="menu_group2_opt1">Option 2.1</string>
    <string name="menu_group2_opt2">Option 2.2</string>
    <string name="dynamic_widget">Dynamic Widget</string>
    <string name="custom_msg">Inserte un texto</string>
    <string name="update">Actualizar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
</resources>
