<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView android:id="@+id/LblMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_msg" />

    <EditText android:id="@+id/TxtMessage"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button android:id="@+id/BtnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept" />

        <Button android:id="@+id/BtnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
